--- a/.settings/org.eclipse.m2e.core.prefs
+++ b/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-activeProfiles=pom.xml
+activeProfiles=
 eclipse.preferences.version=1
-resolveWorkspaceProjects=false
+resolveWorkspaceProjects=true
 version=1
